--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -36,7 +36,7 @@
 %% Basic information
 \begin{center}
 {\LARGE\scshape Jen-Hsiang Ou}\\[2pt]
-{\color{gray}\bf\phone | \address | \href{mailto:\email}{\email} | \url{\web}}
+{\color{gray}\bf\phone | \address | \href{mailto:\email}{\email} | \href{\web}{\web}}
 \end{center}
 
 
@@ -135,15 +135,15 @@ I am currently a PhD candidate in Computational Genetics at Uppsala University, 
 %% Publications
 \section*{Publications}
 \begin{itemize}
-\item \underline{\bf Ou, J.H.} (2024). Exploring the genetic landscape of chicken populations: Admixture, growth QTLs, and long-term selection dynamics. Doctoral thesis, Uppsala dissertations from the Faculty of Medicine 2053.
-\item \underline{\bf Ou, J.H.} (2024). geno2r: Functions for reading genotype data in R. R package version 1.6.2. \url{https://www.oumark.net/geno2r/}.
-\item \underline{\bf Ou, J.H.}, Rönneburg, T., Carlborg, Ö., Honaker, C.F., Siegel, P.B., Rubin, C.J. (2024). Complex genetic architecture of the chicken Growth1 QTL region. PloS One, Accepted.
-\item \underline{\bf Ou, J.H.}, Wu, P.Y., Liao, C.T., (2023). TSDFGS: Training set determination for genomic selection. R package version 2.4.2. \url{https://www.oumark.net/TSDFGS}.
-\item Wu, P.Y., \underline{\bf Ou, J.H.}, Liao, C.T. (2023). Sample size determination for training set optimization in genomic prediction. Theoretical and Applied Genetics, 136(3).
-\item Rönneburg, T., \underline{\bf Ou, J.H.}, Pettersson, M., Honaker, C.F., Siegel, P.B., Caroborg, Ö. (2023). Within-line segregation as contributors to long-term, single-trait selection-responses in the Virginia chicken lines. Manuscript in thesis, Uppsala University.
-\item Guo, Y., \underline{\bf Ou, J.H.}, Zan, Y., Wang, Y., Li, H., Zhu, C., Chen, K., Zhou, X., Hu, X., Caroborg, Ö. (2022). Researching on the fine structure and admixture of the worldwide chicken population reveal connections between populations and important events in breeding history. Evolutionary Applications, 15(4).
-\item \underline{\bf Ou, J.H.}, Liao, C.T. (2019). Training set determination for genomic selection. Theoretical and Applied Genetics, 132(10). (Also being used as my master's thesis)
-\item Lin, P.C., Tsai, Y.C., Hsu, S.K., \underline{\bf Ou, J.H.}, Liao, C.T., Tung, C.W. (2018). Identification of nature variants affecting chlorophyll content dynamics during rice seedling development. Plant breeding, 137(3).
+\item \underline{\bf Ou, J.H.} (2024). Exploring the genetic landscape of chicken populations: Admixture, growth QTLs, and long-term selection dynamics. {\it Doctoral thesis, Uppsala dissertations from the Faculty of Medicine 2053}.
+\item \underline{\bf Ou, J.H.} (2024). geno2r: Functions for reading genotype data in R. {\it R package version 1.6.2}.\\ \href{https://www.oumark.net/geno2r/}{https://www.oumark.net/geno2r/}.
+\item \underline{\bf Ou, J.H.}, Rönneburg, T., Carlborg, Ö., Honaker, C.F., Siegel, P.B., Rubin, C.J. (2024). Complex genetic architecture of the chicken {\it Growth1} QTL region. {\it PLoS ONE}, 19(5):e0295109.
+\item \underline{\bf Ou, J.H.}, Wu, P.Y., Liao, C.T., (2023). TSDFGS: Training set determination for genomic selection. {\it R package version 2.4.2}. \href{https://www.oumark.net/TSDFGS}{https://www.oumark.net/TSDFGS}.
+\item Wu, P.Y., \underline{\bf Ou, J.H.}, Liao, C.T. (2023). Sample size determination for training set optimization in genomic prediction. {\it Theoretical and Applied Genetics}, 136(3).
+\item Rönneburg, T., \underline{\bf Ou, J.H.}, Pettersson, M., Honaker, C.F., Siegel, P.B., Caroborg, Ö. (2023). Within-line segregation as contributors to long-term, single-trait selection-responses in the Virginia chicken lines. {\it Manuscript in thesis, Uppsala University}.
+\item Guo, Y., \underline{\bf Ou, J.H.}, Zan, Y., Wang, Y., Li, H., Zhu, C., Chen, K., Zhou, X., Hu, X., Caroborg, Ö. (2022). Researching on the fine structure and admixture of the worldwide chicken population reveal connections between populations and important events in breeding history. {\it Evolutionary Applications}, 15(4).
+\item \underline{\bf Ou, J.H.}, Liao, C.T. (2019). Training set determination for genomic selection. {\it Theoretical and Applied Genetics}, 132(10).
+\item Lin, P.C., Tsai, Y.C., Hsu, S.K., \underline{\bf Ou, J.H.}, Liao, C.T., Tung, C.W. (2018). Identification of nature variants affecting chlorophyll content dynamics during rice seedling development. {\it Plant breeding}, 137(3).
 
 \end{itemize}
 
