--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -25,7 +25,7 @@
 
 %%% Informations
 \def\phone{+886-(0)910-397161}
-\def\address{Regngatan 6, 75431 Uppsala, Sweden}
+\def\address{7F.-3, No. 7, Dongfeng St., Taipei, Taiwan}
 \def\email{oumark.me@outlook.com}
 \def\web{www.oumark.net}
 
@@ -48,7 +48,7 @@ I am currently a PhD candidate in Computational Genetics at Uppsala University, 
 \section*{Education}
 
 % PhD
-\subsection*{PhD candidate in Computational Genetics \hfill 2021-Current}
+\subsection*{PhD candidate in Computational Genetics \hfill 2020-Current}
 \begin{itemize}
 \item Department of Medical Biochemistry and Microbiology, Faculty of Medicine, Uppsala University, Sweden
 \item Thesis: Exploring the Genetic Landscape of Chicken Populations: Admixture, Growth QTLs, and Long-Term Selection Dynamics \\ {\color{gray} Uncover the domestication history of global chicken, the complex genetic architecture of chicken body weight, and the selection response after 40 generations of intense bi-directional selection.}
@@ -56,7 +56,7 @@ I am currently a PhD candidate in Computational Genetics at Uppsala University, 
 
 
 % Master
-\subsection*{MSc in Biostatistics \hfill 2018-2019}
+\subsection*{MSc in Biostatistics \hfill 2016-2018}
 \begin{itemize}
 \item Department of Agronomy, College of Bioresources and Agriculture, National Taiwan University, Taiwan
 \item Thesis: Training Set Determination for Genomic Selection (\href{https://doi.org/10.1007/s00122-019-03387-0}{doi:10.1007/s00122-019-03387-0}) \\ {\color{gray} Provide a new optimality criterion to determine a training set that is expected to result in the highest Pearson's correlation between the genomic estimated breeding value and the actual phenotype.}
@@ -64,7 +64,7 @@ I am currently a PhD candidate in Computational Genetics at Uppsala University, 
 
 
 % Bachelor
-\subsection*{BSc in Agronomy \hfill 2016-2018}
+\subsection*{BSc in Agronomy \hfill 2012-2016}
 \begin{itemize}
 \item Department of Agronomy, College of Bioresources and Agriculture, National Taiwan University, Taiwan
 \end{itemize}
@@ -84,30 +84,30 @@ I am currently a PhD candidate in Computational Genetics at Uppsala University, 
 \item IMBIM-day 2023. A full-day scientific workshop and banquet
 \end{itemize}
 
-\subsection*{TA of Comparative Genomics for Biomedicine Course \hfill 2021-2024}
+\subsection*{TA of Comparative Genomics for Biomedicine Course \hfill 2020-2024}
 \begin{itemize}
 \item Master-level course at Uppsala University
 \end{itemize}
 
-\subsection*{Teacher of Bioinformatic Course \hfill 2021-2024}
+\subsection*{Teacher of Bioinformatic Course \hfill 2020-2024}
 \begin{itemize}
 \item Master-level course at Uppsala University
 \item Responsible for the GWAS module, giving main lectures, serving as an examiner, and practicing TA
 \end{itemize}
 
-\subsection*{Research assistant \hfill 2020-2021}
+\subsection*{Research assistant \hfill 2019}
 \begin{itemize}
 \item Uppsala Biomedical Centre, Uppsala University, Sweden
 \item NGS data alignment, quality control, server maintenance, teaching, and software development
 \end{itemize}
 
-\subsection*{Research assistant \hfill 2019-2020}
+\subsection*{Research assistant \hfill 2018-2019}
 \begin{itemize}
 \item National Taiwan University, Taiwan
 \item Software developed for simulation studies, server maintenance, and manuscript writing
 \end{itemize}
 
-\subsection*{TA \& 3 times excellent teaching assistants \hfill 2018-2019}
+\subsection*{TA \& 3 times excellent teaching assistants \hfill 2016-2018}
 \begin{itemize}
 \item National Taiwan University, Taiwan
 \item TA for statistics labs. Teaching the R programming language and practical application of statistics
@@ -136,8 +136,8 @@ I am currently a PhD candidate in Computational Genetics at Uppsala University, 
 \section*{Publications}
 \begin{itemize}
 \item \underline{\bf Ou, J.H.} (2024). Exploring the genetic landscape of chicken populations: Admixture, growth QTLs, and long-term selection dynamics. {\it Doctoral thesis, Uppsala dissertations from the Faculty of Medicine 2053}.
-\item \underline{\bf Ou, J.H.} (2024). geno2r: Functions for reading genotype data in R. {\it R package version 1.6.2}.\\ \href{https://www.oumark.net/geno2r/}{https://www.oumark.net/geno2r/}.
 \item \underline{\bf Ou, J.H.}, Rönneburg, T., Carlborg, Ö., Honaker, C.F., Siegel, P.B., Rubin, C.J. (2024). Complex genetic architecture of the chicken {\it Growth1} QTL region. {\it PLoS ONE}, 19(5):e0295109.
+\item \underline{\bf Ou, J.H.} (2024). geno2r: Functions for reading genotype data in R. {\it R package version 1.6.2}.\\ \href{https://www.oumark.net/geno2r/}{https://www.oumark.net/geno2r/}.
 \item \underline{\bf Ou, J.H.}, Wu, P.Y., Liao, C.T., (2023). TSDFGS: Training set determination for genomic selection. {\it R package version 2.4.2}. \href{https://www.oumark.net/TSDFGS}{https://www.oumark.net/TSDFGS}.
 \item Wu, P.Y., \underline{\bf Ou, J.H.}, Liao, C.T. (2023). Sample size determination for training set optimization in genomic prediction. {\it Theoretical and Applied Genetics}, 136(3).
 \item Rönneburg, T., \underline{\bf Ou, J.H.}, Pettersson, M., Honaker, C.F., Siegel, P.B., Caroborg, Ö. (2023). Within-line segregation as contributors to long-term, single-trait selection-responses in the Virginia chicken lines. {\it Manuscript in thesis, Uppsala University}.
